Wireframe display in sculpt-mode broke when hide a part of the mesh #66351

Closed
opened 2019-07-02 21:32:03 +02:00 by Tonatiuh de San Julián · 7 comments

System Information
Operating system: Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 12:17, hash: 163996b681
Worked: (optional)

Short description of error
In sculpt mode with the overlay wireframe activated at 100% if you hide a part of the mesh with H and box hide, part of the wireframe disappear.

Exact steps for others to reproduce the error
Add cube, make a subdiv modifier of 5, Apply, go to sculpt mode, activate the wireframe overlay at 100%, activate box hide with H and hide a part of the mesh.

Captura de pantalla de 2019-07-02 21-27-10.png

Captura de pantalla de 2019-07-02 21-27-27.png

**System Information** Operating system: Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 12:17, hash: `163996b681` Worked: (optional) **Short description of error** In sculpt mode with the overlay wireframe activated at 100% if you hide a part of the mesh with H and box hide, part of the wireframe disappear. **Exact steps for others to reproduce the error** Add cube, make a subdiv modifier of 5, Apply, go to sculpt mode, activate the wireframe overlay at 100%, activate box hide with H and hide a part of the mesh. ![Captura de pantalla de 2019-07-02 21-27-10.png](https://archive.blender.org/developer/F7562514/Captura_de_pantalla_de_2019-07-02_21-27-10.png) ![Captura de pantalla de 2019-07-02 21-27-27.png](https://archive.blender.org/developer/F7562515/Captura_de_pantalla_de_2019-07-02_21-27-27.png)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @jfmatheu

Added subscriber: @jfmatheu

Yeah, I confirm this is happening! image.png

Yeah, I confirm this is happening! ![image.png](https://archive.blender.org/developer/F7562525/image.png)

When shade smooth is activated, there is no problem, so it only occurred to me in shade flat.

Captura de pantalla de 2019-07-02 21-56-42.png

When shade smooth is activated, there is no problem, so it only occurred to me in shade flat. ![Captura de pantalla de 2019-07-02 21-56-42.png](https://archive.blender.org/developer/F7562543/Captura_de_pantalla_de_2019-07-02_21-56-42.png)
Clément Foucault was assigned by Germano Cavalcante 2019-07-03 16:56:54 +02:00

Added subscriber: @ssendam

Added subscriber: @ssendam

This issue was referenced by 8a7c2c4192

This issue was referenced by 8a7c2c4192aff7f34e50dac83bd793e0247fc604

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66351
No description provided.