Fix T66351 Wireframe display in sculpt-mode broke when hiding parts